tdf#166837 vcl: Avoid some const_cast

Make methods non-const instead of having
const methods and const_cast'ing in them.

Change-Id: I704da690e52b14645e8c535099221e9bcce2c713
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/186147
Tested-by: Jenkins
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>